Alteração de mensagem

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="letter">
             <h1></h1>
             <p class="message">
-               Queria me desculpar por ser um cabeça dura e completo idiota, homem não pensa. Mas quero que saiba que te amo muito, você é magnífica, minha ametista. <br>
+               Amo Você até mais do que eu mesmo possa imaginar. <br>
             </p>
             <p class="signature">Com amor,<br>Tavinho</p>
         </div>
