--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="letter">
             <h1></h1>
             <p class="message">
-               Amo Você até mais do que eu mesmo possa imaginar. <br>
+               O que acha de um filme de comédia? <br>
             </p>
-            <p class="signature">Com amor,<br>Tavinho</p>
+            <p class="signature">Com amor,<br>Tavi</p>
         </div>
     </div>
     <script src="script.js"></script>
