Alterações de texto
Realizado a alteração de texto na carta

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="card">
         <div class="heart"></div>
         <div class="letter">
-            <h1></h1>
+            <h1>Olá</h1>
             <p class="message">
                O que acha de um filme de comédia? <br>
             </p>
